# preprocess_eeg

./: .gitignore  README.md  main.py  preprocess_eeg.py  pyproject.toml  requirements.txt  view
src/: create_data_folder.py  download_sample_data.py  extract_trials.py  preprocess.py  preprocess_eeg.py  read_xdf.py  settings.py
