[tool.poetry]
name = "preprocess-eeg"
version = "0.1.0"
description = ""
authors = ["Andres Pinilla <apinillapalacios@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyxdf = "^1.16.6"
asrpy = "^0.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
